infrastructure/vault/templates/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.chasingthe.cloud`)
      services:
        - name: vault
          port: 8200
  tls:
    secretName: vault-tls
